# relative-pattern

./: CMakeLists.txt  README.md
CMake/: FindPin.cmake  UsePin.cmake
codes/: bibsort.c  graph.cpp  morphisms.ml
experiments/: appqsort.c  arguments  bublesort.c  bublesort_obf.c  bublesort_recursive.c  bublesort_recursive_obf.c  bublesort_recursive_obf2.c  virsuper_bbsort_recur2.c  virtualize_super_bublesort_recursive.c
results/: bublesort_bb.trace1  bublesort_bb.trace2  bublesort_bb1.trace  bublesort_bb2.trace  bublesort_obf_bb.trace1  bublesort_obf_bb.trace2  bublesort_obf_bb1.trace  bublesort_obf_bb2.trace  bublesort_ollvm_bb1.trace  bublesort_ollvm_bb2.trace  bublesort_recursive_bb1.trace  bublesort_recursive_bb2.trace  bublesort_recursive_obf2_bb1.trace  bublesort_recursive_obf2_bb2.trace  bublesort_recursive_obf_bb1.trace  bublesort_recursive_obf_bb2.trace  virtualize_super_bublesort_recursive_bb.trace1  virtualize_super_bublesort_recursive_bb.trace2
src/: CMakeLists.txt  main.cpp  parsing_helper.h
src/CMake/: UsePin.cmake
src/engine/: traceExpAnalysis.ml  traceExpDirectAnalysis.ml
src/jump_table/: CMakeLists.txt  dump.cpp  main.cpp
src/lib/cap/: cap.h  graph.cpp  parser.cpp  saver.cpp  trace.h  trace.pb.h  tracer.cpp
src/lib/framework/: analysis_callback.h
src/lib/type/: instruction.cpp  instruction.h  operand.cpp  operand.h  trace_graph.cpp  trace_graph.h
src/virtual_cfg/: CMakeLists.txt  main.cpp  relative.cpp
virtual_cfg/: CMakeLists.txt  main.cpp
